[gd_scene load_steps=4 format=3 uid="uid://87jekfqf6er8"]

[ext_resource type="Script" path="res://objects/WeightPlate.gd" id="1_c67wj"]
[ext_resource type="Texture2D" uid="uid://ce73dsmmayraj" path="res://art/weightPlate.png" id="2_22om2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1r3bo"]
size = Vector2(60, 60)

[node name="WeightPlate" type="StaticBody2D"]
script = ExtResource("1_c67wj")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_22om2")
offset = Vector2(32, 32)

[node name="Area2D" type="Area2D" parent="." groups=["plate"]]
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_1r3bo")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
